--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap");
+* {
+  margin: 0;
+}
 
 body {
   background-color: #d5e1ef;
@@ -16,11 +19,13 @@ img {
 h1 {
   font-size: 22px;
   color: #1F314F;
+  margin-top: 24px;
 }
 
 p {
   letter-spacing: 0.19px;
   color: #7D889E;
+  margin-top: 16px;
 }
 
 .container {
